force-app/main/default/objects/Manufacturing_Range_Value__c/Manufacturing_Range_Value__c.object-meta.xml
<CustomObject>
    <label>Manufacturing Range Value</label>
    <nameField>
        <displayFormat>MfgRngVal-{0000}</displayFormat>
        <label>Manufacturing Range Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Range Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>