force-app/main/default/objects/Manufacturing_Range_Value__c/fields/MaxMfgRngMulti__c.field-meta.xml
<CustomField>
    <fullName>MaxMfgRngMulti__c</fullName>
    <label>MaxMfgRngMulti</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>