force-app/main/default/objects/Manufacturing_Range_Value__c/fields/MinMfgRngAdder__c.field-meta.xml
<CustomField>
    <fullName>MinMfgRngAdder__c</fullName>
    <label>MinMfgRngAdder</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>