force-app/main/default/objects/Manufacturing_Range_Value__c/fields/RGEMAXUL__c.field-meta.xml
<CustomField>
    <fullName>RGEMAXUL__c</fullName>
    <label>RGEMAXUL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>