force-app/main/default/objects/Manufacturing_Range_Value__c/fields/RTPRS1UL__c.field-meta.xml
<CustomField>
    <fullName>RTPRS1UL__c</fullName>
    <label>RTPRS1UL</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>